# speech2text

./: LICENSE  README.md  pyproject.toml
app/: run.py
